# reminder-bot

./: .env.sample  Cargo.toml
src/: main.rs  telegram.rs
