[package]
name = "reminder-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.chrono]
version = "0.4.19"
features = ["unstable-locales"]

[dependencies]
serde = "1.0.130"
